--- a/server/scc/pyproject.toml
+++ b/server/scc/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "httpx>=0.28.1",
-    "mcp[cli]>=1.4.1",
+    "fastmcp>=2.7.1",
     "python-dotenv>=1.0.0",
     "typing-extensions>=4.8.0",
     "aiohttp>=3.9.0",
